--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="container-fluid">
         <a class="navbar-brand">
           <img
-            src="/assets/images/logo.png"
+            src="./assets/images/logo.png"
             class="img-fluid"
             alt="Logo"
             width="45"
@@ -118,7 +118,7 @@
         <div class="col">
           <div class="image mb-3">
             <img
-              src="assets/images/profile.png"
+              src="./assets/images/profile.png"
               alt="Profile Picture"
               class="img-fluid"
               width="200"
