--- a/index.html
+++ b/index.html
@@ -339,31 +339,31 @@
             "Sebuah media informasi untuk desa dibuat menggunakan react js",
         },
         {
-          image: "/assets/images/bk.png",
+          image: "./assets/images/bk.png",
           title: "Website Bimbingan Konseling",
           description: "Website Bimbingan Konseling dibuat menggunakan laravel",
         },
         {
-          image: "/assets/images/rapel.png",
+          image: "./assets/images/rapel.png",
           title: "Redesign Aplikasi RAPEL ",
           description: "Redesign Aplikasi RAPEL dibuat menggunakan figma",
         },
 
         {
-          image: "/assets/images/outsystems.png",
+          image: "./assets/images/outsystems.png",
           title: "Intern as Low Code Application Dev at Metrodata Academy",
           description:
             "Menggunakan salah satu platform low code yaitu Outsystems ",
         },
 
         {
-          image: "/assets/images/ccp.jpg",
+          image: "./assets/images/ccp.jpg",
           title: "Club Coding",
           description: "Mengikuti organisasi kampus club coding",
         },
 
         {
-          image: "/assets/images/ukm.jpg",
+          image: "./assets/images/ukm.jpg",
           title: "UKM Programing",
           description: "Menjadi anggota UKM Programing",
         },
